--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
       </section>
     </div>
 
+
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Oomarkbutton maintained by <a href="https://github.com/OpeningO">OpeningO</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">NBTableView maintained by <a href="https://github.com/OpeningO">OpeningO</a></p>
+        <h5><a href="http://openingo.github.io">Home</a> | <a href="http://openingo.github.io/team.html">Team</a> | <a href="mailto:openingo.inc@gmail.com">Contact</a></h5>
+        (c) 2013 Copyright by Opening,Inc
       </footer>
     </div>
 
